--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/myblog1?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123zys
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis-plus.configuration.map-underscore-to-camel-case=true
@@ -20,11 +20,11 @@ spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.database=0
 spring.redis.lettuce.pool.max-active=8
-# Á¬½Ó³Ø×î´ó×èÈûµÈ´ıÊ±¼ä£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓĞÏŞÖÆ£© Ä¬ÈÏ -1
+# è¿æ¥æ± æœ€å¤§é˜»å¡ç­‰å¾…æ—¶é—´ï¼ˆä½¿ç”¨è´Ÿå€¼è¡¨ç¤ºæ²¡æœ‰é™åˆ¶ï¼‰ é»˜è®¤ -1
 spring.redis.lettuce.pool.max-wait=-1
-# Á¬½Ó³ØÖĞµÄ×î´ó¿ÕÏĞÁ¬½Ó Ä¬ÈÏ 8
+# è¿æ¥æ± ä¸­çš„æœ€å¤§ç©ºé—²è¿æ¥ é»˜è®¤ 8
 spring.redis.lettuce.pool.max-idle=8
-# Á¬½Ó³ØÖĞµÄ×îĞ¡¿ÕÏĞÁ¬½Ó Ä¬ÈÏ 0
+# è¿æ¥æ± ä¸­çš„æœ€å°ç©ºé—²è¿æ¥ é»˜è®¤ 0
 spring.redis.lettuce.pool.min-idle=0
 
 
